# openvslam

./: .gitignore  .gitmodules
example/: CMakeLists.txt  run_spincamera_slam.cc  run_xtion_slam.cc  xtion_mono.yaml  xtion_rgbd.yaml
fromSLAM/: tmp
src/openvslam/: tracking_module.cc
src/openvslam/publish/: frame_publisher.cc  frame_publisher.h
src/pangolin_viewer/: viewer.cc  viewer.h
